# XJTU_RMV_Task4

./: .clangd  .gitignore  CMakeLists copy.txt  CMakeLists.txt  README.md  abuild.sh  package.xml  test.sh  try2.sh
.cache/clangd/index/: CameraParams.h.4410330D2BE213E9.idx  MvCameraControl.h.5039C3B2B5332B5A.idx  MvErrorDefine.h.8943567A64405261.idx  MvISPErrorDefine.h.292E8815720191CF.idx  MvObsoleteInterfaces.h.C31B02C4B7CD0029.idx  ObsoleteCamParams.h.1AE7D2BC9A65DF68.idx  PixelType.h.CA74471E32A51DDA.idx  arm_detector.h.27BA36E2581BF9D8.idx  img_dealer.cpp.CE20D97E7B49BE78.idx  img_publisher.cpp.6E106FEAE95AAB35.idx  main.cpp.2F89397BED18ED6D.idx
include/: PixelType.h
install/: local_setup.sh  setup.sh
install/rmv_task04/include/rmv_task04/rmv_task04/msg/: object.h  object.hpp  object_array.h  object_array.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/rmv_task04/include/rmv_task04/rmv_task04/msg/detail/: object__builder.hpp  object__functions.c  object__functions.h  object__rosidl_typesupport_fastrtps_c.h  object__rosidl_typesupport_fastrtps_cpp.hpp  object__rosidl_typesupport_introspection_c.h  object__rosidl_typesupport_introspection_cpp.hpp  object__struct.h  object__struct.hpp  object__traits.hpp  object__type_support.c  object__type_support.cpp  object__type_support.h  object__type_support.hpp  object_array__builder.hpp  object_array__functions.c  object_array__functions.h  object_array__rosidl_typesupport_fastrtps_c.h  object_array__rosidl_typesupport_fastrtps_cpp.hpp  object_array__rosidl_typesupport_introspection_c.h  object_array__rosidl_typesupport_introspection_cpp.hpp  object_array__struct.h  object_array__struct.hpp  object_array__traits.hpp  object_array__type_support.c  object_array__type_support.cpp  object_array__type_support.h  object_array__type_support.hpp
install/rmv_task04/lib/rmv_task04/: ImgDealer  ImgPublisher
install/rmv_task04/local/lib/python3.10/dist-packages/rmv_task04/: _rmv_task04_s.ep.rosidl_typesupport_c.c  _rmv_task04_s.ep.rosidl_typesupport_fastrtps_c.c  _rmv_task04_s.ep.rosidl_typesupport_introspection_c.c
install/rmv_task04/local/lib/python3.10/dist-packages/rmv_task04-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
install/rmv_task04/share/ament_index/resource_index/rosidl_interfaces/: rmv_task04
install/rmv_task04/share/rmv_task04/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rmv_task04/share/rmv_task04/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_rmv_task04__rosidl_generator_cExport-noconfig.cmake  export_rmv_task04__rosidl_generator_cExport.cmake  export_rmv_task04__rosidl_generator_cppExport.cmake  export_rmv_task04__rosidl_generator_pyExport-noconfig.cmake  export_rmv_task04__rosidl_generator_pyExport.cmake  export_rmv_task04__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_rmv_task04__rosidl_typesupport_fastrtps_cExport.cmake  export_rmv_task04__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_rmv_task04__rosidl_typesupport_fastrtps_cppExport.cmake  rmv_task04Config.cmake  rmv_task04__rosidl_typesupport_cExport-noconfig.cmake  rmv_task04__rosidl_typesupport_cExport.cmake  rmv_task04__rosidl_typesupport_cppExport-noconfig.cmake  rmv_task04__rosidl_typesupport_cppExport.cmake  rmv_task04__rosidl_typesupport_introspection_cExport-noconfig.cmake  rmv_task04__rosidl_typesupport_introspection_cExport.cmake  rmv_task04__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rmv_task04__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/rmv_task04/share/rmv_task04/launch/: launch.py
install/rmv_task04/share/rmv_task04/msg/: Object.idl  Object.msg  ObjectArray.idl  ObjectArray.msg
launch/: launch.py
learn/example_ros2_interfaces/: CMakeLists.txt  package.xml
learn/example_ros2_interfaces/install/: local_setup.sh  setup.sh
learn/example_ros2_interfaces/install/example_ros2_interfaces/share/example_ros2_interfaces/: local_setup.sh  package.sh
learn/example_ros2_interfaces/log/: latest_build
learn/example_service_rclcpp/: .clangd  CMakeLists.txt  package.xml
learn/example_service_rclcpp/.cache/clangd/index/: service_client_01.cpp.7A2F2D7B8DE1F016.idx  service_server_01.cpp.6FD21C377BC81108.idx
learn/example_service_rclcpp/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
learn/example_service_rclcpp/install/example_service_rclcpp/lib/example_service_rclcpp/: service_client_01  service_server_01
learn/example_service_rclcpp/install/example_service_rclcpp/share/example_service_rclcpp/: local_setup.sh  package.sh
learn/example_service_rclcpp/log/: latest_build
learn/example_service_rclcpp/src/: service_client_01.cpp  service_server_01.cpp
learn/example_topic_rclcpp/: CMakeLists.txt
learn/example_topic_rclcpp/.cache/clangd/index/: topic_publisher_01.cpp.EAAAAFC0AEB20EDC.idx  topic_subscribe_01.cpp.B2A8C098AF01BB88.idx
learn/example_topic_rclcpp/install/: local_setup.sh  setup.sh
learn/example_topic_rclcpp/install/example_topic_rclcpp/lib/: topic_subscribe_01
learn/example_topic_rclcpp/install/example_topic_rclcpp/lib/example_topic_rclcpp/: topic_publisher_01
learn/example_topic_rclcpp/install/example_topic_rclcpp/share/example_topic_rclcpp/: local_setup.sh  package.sh  package.xml
learn/example_topic_rclcpp/log/: latest_build
learn/example_topic_rclcpp/src/: topic_publisher_01.cpp  topic_subscribe_01.cpp
log/: latest_build
src/: arm_detector.h  dector1.cpp  img_dealer.cpp  img_publisher.cpp  main.cpp
(+15 files in other folders)
